--- a/client/src/app/product-page/product-page.component.css
+++ b/client/src/app/product-page/product-page.component.css
@@ -1,10 +1,8 @@
 .product-page-background {
     background-color: rgb(45, 45, 45);
-    width: 100vw;
-    height: 100vh;
     display: grid;
     grid-template-columns: 0.15fr 1fr;
-    grid-template-rows: 0.1fr 1fr;
+    grid-template-rows: 0.05fr 1fr;
     justify-content: center;
 }
 
@@ -12,7 +10,7 @@
 .container-navbar {
     grid-column: 2;
     grid-row: 1;
-    border: 1px solid white;
+    border-bottom: 1px solid white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -28,7 +26,7 @@
     display: flex;
     flex-direction: row;
     gap: 3rem;
-    margin: 10px 20px auto auto;
+    margin: 20px 20px auto auto;
 }
 
 .container-cart-user img {
@@ -47,6 +45,14 @@
     filter: invert(77%) sepia(87%) saturate(1460%) hue-rotate(345deg) brightness(90%) contrast(88%);
 }
 
+.cart-count {
+    position: absolute;
+    color: white;
+    margin-left: 40px;
+    margin-top: -7px;
+    font-size: 1.15rem;
+}
+
 .user-icon {
     filter: invert(100%) sepia(0%) saturate(15%) hue-rotate(287deg) brightness(106%) contrast(103%);
 }
@@ -55,9 +61,9 @@
 .container-products {
     grid-column: 2;
     grid-row: 2;
-    border: 1px solid red;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
 }
 
 .container-single-product {
@@ -77,7 +83,8 @@
 }
 
 .container-single-product img {
-    margin: 0 auto 0 auto;
+    margin: 20px auto 0 auto;
+    padding-bottom: 10px;
     height: 200px;
     width: 200px;
 }
@@ -97,13 +104,13 @@
     flex-direction: row;
     justify-content: center;
     gap: 1.5rem;
+    padding-bottom: 0.5rem;
 }
 
 /* left-side filters */
 .container-filters {
     grid-column: 1;
     grid-row: 1 / -1;
-    border: 1px solid green;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,6 +148,68 @@
     margin-top: 2rem;
 }
 
-.container-material {
+/* cart modal */
+.modal-cart-background {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(45, 45, 45, 0.6);
+}
 
+.display-modal {
+    display: block;
+}
+
+.modal-cart {
+    margin: 4rem 25px auto auto;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    text-align: center;
+    border-radius: 5px;
+    gap: 0.5rem;
+}
+
+.close-icon {
+    right: 30px;
+    margin-top: 2px;
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    position: absolute;
+    cursor: pointer;
+    filter: invert(77%) sepia(87%) saturate(1460%) hue-rotate(345deg) brightness(90%) contrast(88%);
+}
+
+.container-cart-single {
+    transition: linear all 0.2s;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-bottom: 1px solid black;
+    cursor: pointer;
+}
+
+.container-cart-single:hover {
+    transition: linear all 0.2s;
+    background-color: rgb(216, 216, 216);
+}
+
+.modal-cart h4 {
+    font-size: 1.25rem;
+    border-bottom: 1px solid black;
+    width: 90%;
+    margin: auto;
+    padding: 5px;
+}
+
+.modal-cart p {
+    padding: 5px;
+}
+
+.price-total {
+    font-weight: 700;
+    font-size: 1.15rem;
 }
