--- a/client/src/app/product-page/product-page.component.html
+++ b/client/src/app/product-page/product-page.component.html
@@ -10,7 +10,7 @@
     </header>
     <!-- display list of products -->
     <main class="container-products">
-        <div *ngFor="let product of products;" class="container-single-product">
+        <div *ngFor="let product of products;" class="container-single-product" (click)="addToCart(product)">
             <!-- image for testing only -->
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC-uPVLJimMVmuMaIvuspIGDIDEAa8XOmdjw&usqp=CAU" alt="{{product.name}}-img">
             <h3>{{product.name}}</h3>
