--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-login-page></app-login-page> -->
-<app-product-page></app-product-page>
+<!-- <app-product-page></app-product-page> -->
+<app-checkout-page></app-checkout-page>
