--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <app-login-page></app-login-page> -->
-<!-- <app-product-page></app-product-page> -->
-<app-checkout-page></app-checkout-page>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
