--- a/client/src/app/product-page/product-page.component.html
+++ b/client/src/app/product-page/product-page.component.html
@@ -50,6 +50,7 @@
                 <p>${{cartItem.price}}</p>
             </div>
             <p class="price-total">${{cartPriceTotal}}</p>
+            <button type="button" class="btn-cart-purchase" (click)="makePurchase()">Purchase</button>
         </div>
     </section>
     <!-- user profile modal -->
