--- a/client/src/app/filters/filters.component.html
+++ b/client/src/app/filters/filters.component.html
@@ -1,1 +1,16 @@
-<p>filters works!</p>
+<aside class="container-filters">
+    <h2>Filter by...</h2>
+    <ul class="container-type">
+        <h3>Type</h3>
+        <p (click)="filterType('ring'); activeFilter($event)">Ring</p>
+        <p (click)="filterType('necklace'); activeFilter($event)">Necklace</p>
+        <p (click)="filterType('earrings'); activeFilter($event)">Earrings</p>
+        <p (click)="filterType('bracelet'); activeFilter($event)">Bracelet</p>
+    </ul>
+    <ul class="container-material">
+        <h3>Material</h3>
+        <p (click)="filterMaterial('gold'); activeFilter($event)">Gold</p>
+        <p (click)="filterMaterial('silver'); activeFilter($event)">Silver</p>
+        <p (click)="filterMaterial('platinum'); activeFilter($event)">Platinum</p>
+    </ul>
+</aside>
