--- a/client/src/app/product-page/product-page.component.css
+++ b/client/src/app/product-page/product-page.component.css
@@ -107,52 +107,6 @@
     padding-bottom: 0.5rem;
 }
 
-/* left-side filters */
-.container-filters {
-    grid-column: 1;
-    grid-row: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    text-align: center;
-}
-
-.container-filters h2 {
-    font-size: 1.5rem;
-    color: white;
-    margin-top: 3rem;
-}
-
-.container-filters h3 {
-    font-size: 1.25rem;
-    color: goldenrod;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid goldenrod;
-}
-
-.container-filters p {
-    transition: linear all 0.1s;
-    cursor: pointer;
-    color: white;
-    font-size: 1.25rem;
-    padding: 0.5rem;
-}
-
-.container-filters p:hover {
-    transition: linear all 0.1s;
-    transform: translateX(5px);
-}
-
-.container-filters p.active-filter {
-    color: rgb(255, 183, 0);
-    font-weight: 900;
-}
-
-.container-type {
-    margin-top: 2rem;
-}
-
 /* cart modal */
 .modal-background {
     display: none;
@@ -256,4 +210,9 @@
     border-bottom: 1px solid black;
     margin: auto;
     width: 80%;
+}
+
+.filters-placement {
+    grid-column: 1;
+    grid-row: 1 / -1;
 }
