--- a/client/src/app/product-page/product-page.component.html
+++ b/client/src/app/product-page/product-page.component.html
@@ -24,22 +24,9 @@
         </div>
     </main>
     <!-- filters -->
-    <aside class="container-filters">
-        <h2>Filter by...</h2>
-        <ul class="container-type">
-            <h3>Type</h3>
-            <p (click)="filterType('ring'); activeFilter($event)">Ring</p>
-            <p (click)="filterType('necklace'); activeFilter($event)">Necklace</p>
-            <p (click)="filterType('earrings'); activeFilter($event)">Earrings</p>
-            <p (click)="filterType('bracelet'); activeFilter($event)">Bracelet</p>
-        </ul>
-        <ul class="container-material">
-            <h3>Material</h3>
-            <p (click)="filterMaterial('gold'); activeFilter($event)">Gold</p>
-            <p (click)="filterMaterial('silver'); activeFilter($event)">Silver</p>
-            <p (click)="filterMaterial('platinum'); activeFilter($event)">Platinum</p>
-        </ul>
-    </aside>
+    <div class="filters-placement">
+        <app-filters></app-filters>
+    </div>
     <!-- cart component -->
     <app-cart [openModalCommand]="openModalCommand"></app-cart>
     <!-- user profile modal -->
