--- a/client/src/app/product-page/product-page.component.css
+++ b/client/src/app/product-page/product-page.component.css
@@ -131,3 +131,15 @@
     grid-column: 1;
     grid-row: 1 / -1;
 }
+
+.product-fetch-error {
+    display: none;
+    color: red;
+    font-size: 2rem;
+    margin: auto;
+    text-align: center;
+}
+
+.display-product-error {
+    display: block;
+}
