--- a/client/src/app/user-profile/user-profile.component.html
+++ b/client/src/app/user-profile/user-profile.component.html
@@ -3,7 +3,13 @@
         <img src="/assets/images/login/x-solid.svg" alt="close-icon" class="close-icon" (click)="toggleProfileModal()">
 
         <h4 class="user-name">{{userProfile}}</h4>
-        <button type="button" class="btn-order-history" (click)="viewOrderHistory()">View Order History</button>
+        <button type="button" class="btn-order-history" (click)="viewOrderHistory(); toggleViewOrderDisplay()">View Order History</button>
+
+        <div [ngClass]="{'display-view-order': displayViewOrder}" class="view-order" *ngFor="let order of orderHistory">
+            <h5>{{order.name}}</h5>
+            <p>{{order.price}}</p>
+        </div>
+
         <button type="button" class="btn-logout" (click)="logout()">Logout</button>
     </div>
 </section>
