--- a/client/src/app/new-user/new-user.component.html
+++ b/client/src/app/new-user/new-user.component.html
@@ -3,6 +3,8 @@
         <img src="/assets/images/login/x-solid.svg" alt="close-icon" (click)="toggleCreationModal()">
         <h2>Create your account</h2>
         <form class="form-user-creation" (submit)="createUserAccount($event)" [formGroup]="userCreationData">
+            <input type="text" placeholder="name" formControlName="name">
+            <input type="text" placeholder="shipping address" formControlName="shipping_address">
             <input type="text" placeholder="username" formControlName="username">
             <input type="password" placeholder="password" formControlName="password">
             <input type="password" placeholder="re-type password" (change)="checkPasswordMatch()" formControlName="rePassword" [ngClass]="{'error-password-input' : displayPasswordError}">
