--- a/client/src/app/product-item/product-item.component.html
+++ b/client/src/app/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<img src="{{product.imgURL}}" alt="{{product.name}}-img" class="product-img">
+<img *ngIf="product.imgURL" src="{{product.imgURL}}" alt="{{product.name}}-img" class="product-img">
 <h3 class="product-name">{{product.name}}</h3>
 <p class="product-price">${{product.price}}</p>
 <div class="container-type-material">
