--- a/client/src/app/product-item/product-item.component.html
+++ b/client/src/app/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <!-- image for testing only -->
-<img src="{{product.imgURL}}" alt="{{product.name}}-img" class="product-img">
-<h3 class="product-name">{{product.name}}</h3>
-<p class="product-price">${{product.price}}</p>
+<img *ngIf="product.imgURL" src="{{product.imgURL}}" alt="{{product.name}}-img" class="product-img">
+<h3 *ngIf="product.imgURL" class="product-name">{{product.name}}</h3>
+<p *ngIf="product.price" class="product-price">${{product.price}}</p>
 <div class="container-type-material">
     <p>{{product.type}}</p>
     |
