--- a/client/src/app/user-profile/user-profile.component.css
+++ b/client/src/app/user-profile/user-profile.component.css
@@ -74,4 +74,6 @@ button {
 .display-view-order {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
 }
