--- a/client/src/app/filters/filters.component.css
+++ b/client/src/app/filters/filters.component.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
     text-align: center;
 }
 
@@ -24,7 +24,7 @@
     transition: linear all 0.1s;
     cursor: pointer;
     color: white;
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     padding: 0.5rem;
 }
 
@@ -36,10 +36,11 @@
 .container-filters p.active-filter {
     color: rgb(255, 183, 0);
     font-weight: 900;
+    transform: translateX(50px);
 }
 
 .container-type {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .btn-reset {
