--- a/client/src/app/new-user/new-user.component.css
+++ b/client/src/app/new-user/new-user.component.css
@@ -21,6 +21,7 @@ button {
     gap: 1rem;
     text-align: center;
     border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px white;
 }
 
 .user-creation-modal img {
