--- a/client/src/app/product-item/product-item.component.css
+++ b/client/src/app/product-item/product-item.component.css
@@ -31,27 +31,25 @@
 }
 
 .container-review {
+    transition: linear all 0.2s;
     position: relative;
     z-index: 3;
     margin: auto auto 10px -90px;
     padding: 5px;
 }
 
-.container-review:hover {
-    border: 1px solid rgb(227, 227, 227);
-}
-
 .review-icon {
     transition: linear all 0.2s;
-    height: 14px;
-    width: 14px;
+    height: 24px;
+    width: 24px;
     filter: invert(77%) sepia(87%) saturate(1460%) hue-rotate(345deg) brightness(90%) contrast(88%);
-    margin-left: 45px;
+    /* margin-left: 45px;  */
 }
 
 .review-icon:hover {
     transition: linear all 0.2s;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
+    transform: translateY(-5px);
 }
 
 .reviews {
@@ -68,8 +66,7 @@
     border-bottom: 1px solid white;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 10rem;
+    justify-content: space-between;
     padding-bottom: 1rem;
 }
 
