--- a/client/src/app/product-item/product-item.component.html
+++ b/client/src/app/product-item/product-item.component.html
@@ -1,3 +1,6 @@
+<!-- for our pagination, leave as is -->
+<h3 *ngIf="iterator % 8 == 0 && iterator != 0" class="observer"></h3>
+
 <img *ngIf="product.imgURL" src="{{product.imgURL}}" alt="{{product.name}}-img" class="product-img">
 <h3 *ngIf="product.name" class="product-name">{{product.name}}</h3>
 <p *ngIf="product.price" class="product-price">${{product.price}}</p>
@@ -8,7 +11,7 @@
 </div>
 <div class="container-review">
     <img src="/assets/images/products/message-solid.svg" alt="speech-icon" class="review-icon" (click)="seeReviews($event)" id="{{product.id}}">
-    <h4 class="reviews">Reviews</h4>
+    <!-- <h4 class="reviews">Reviews</h4> -->
     <div class="wrapper-user-reviews" *ngFor="let review of reviews">
         <div class="single-review">
             <p>{{review.content}}</p>
@@ -16,5 +19,3 @@
         </div>
     </div>
 </div>
-
-<h3 *ngIf="iterator % 8 == 0 && iterator != 0" class="observer"></h3>
