--- a/client/src/app/filters/filters.component.html
+++ b/client/src/app/filters/filters.component.html
@@ -3,7 +3,7 @@
         <h3>Type</h3>
         <p (click)="activateFilter($event, 'type', 'Ring')" class="filter-option-type">Ring</p>
         <p (click)="activateFilter($event, 'type','Necklace')" class="filter-option-type">Necklace</p>
-        <p (click)="activateFilter($event, 'type','Earing')" class="filter-option-type">Earing</p>
+        <p (click)="activateFilter($event, 'type','Earing')" class="filter-option-type">Earring</p>
         <p (click)="activateFilter($event, 'type','Accessory')" class="filter-option-type">Accessory</p>
     </ul>
     <ul class="container-material">
