--- a/client/src/app/cart/cart.component.css
+++ b/client/src/app/cart/cart.component.css
@@ -27,9 +27,10 @@
     transition: linear all 0.2s;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    border-bottom: 1px solid black;
+    justify-content: space-between;
+    border-bottom: 1px solid #c8c1c1;
     cursor: pointer;
+    padding: 5px 20px;
 }
 
 .container-cart-single:hover {
