--- a/client/src/app/login-form/login-form.component.html
+++ b/client/src/app/login-form/login-form.component.html
@@ -9,5 +9,5 @@
     </div>
     <!-- login failed message -->
     <p class="login-failed-message" *ngIf="loginFailed">Login failed, please try again.</p>
-    <button type="submit" class="btn-sign-in">Sign in</button>
+    <button type="submit" class="btn-sign-in">{{loginBtnText}}</button>
 </form>
