--- a/client/src/app/new-user/new-user.component.html
+++ b/client/src/app/new-user/new-user.component.html
@@ -9,7 +9,7 @@
             <input type="password" placeholder="password" formControlName="password">
             <input type="password" placeholder="re-type password" (change)="checkPasswordMatch()" formControlName="rePassword" [ngClass]="{'error-password-input' : displayPasswordError}">
             <p [ngClass]="{'display-password-error' : displayPasswordError, 'hide-password-error' : !displayPasswordError}">Passwords do not match</p>
-            <button type="submit">Create</button>
+            <button type="submit">{{createBtnText}}</button>
         </form>
     </div>
 </section>
